--- a/Android/app/app/src/main/AndroidManifest.xml
+++ b/Android/app/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.PatientHealthMetricsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.App1" />
+        <activity
             android:name=".activity.ChatbotActivity"
             android:exported="false" />
         <activity
