--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Backend/app/Chatbot/api_chatbot.py
 Backend/app/Chatbot/api_chatbot.py
 Backend/app/Chatbot/api_chatbot.py
 Backend/app/Chatbot/api_chatbot.py
+Backend/app/Chatbot/api_chatbot.py
