--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Backend/app/Chatbot/api_chatbot.py
 Backend/app/Chatbot/api_chatbot.py
 Backend/app/Chatbot/api_chatbot.py
 Backend/app/Chatbot/api_chatbot.py
+Backend/app/Oauth/.env
