--- a/Android/app/app/src/main/AndroidManifest.xml
+++ b/Android/app/app/src/main/AndroidManifest.xml
@@ -25,13 +25,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ForgetPassswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.PatientHealthMetricsActivity"
             android:exported="false"
             android:theme="@style/Theme.App1" />
         <activity
             android:name=".activity.ChatbotActivity"
-            android:windowSoftInputMode="adjustResize"
-        android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".activity.NotificationsActivity"
             android:exported="false" />
